--- a/index.html
+++ b/index.html
@@ -1,150 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Money Usage Tracker</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      padding: 20px;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    .form {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 20px;
-    }
-
-    .form input, .form button {
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .form button {
-      background-color: #4CAF50;
-      color: white;
-      cursor: pointer;
-    }
-
-    .form button:hover {
-      background-color: #45a049;
-    }
-
-    .expense-list {
-      margin-top: 20px;
-    }
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    li {
-      background-color: #f9f9f9;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expense Tracker</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f9;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .expense-form {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+        .expense-form input, .expense-form button {
+            padding: 10px;
+            font-size: 16px;
+            margin: 5px;
+        }
+        .expense-form input {
+            width: 45%;
+        }
+        .expense-form button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .expense-form button:hover {
+            background-color: #45a049;
+        }
+        h2 {
+            color: #333;
+        }
+        .expense-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            border: 1px solid #ddd;
+            margin: 5px 0;
+            background-color: #fafafa;
+            border-radius: 5px;
+        }
+        .expense-item button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        .expense-item button:hover {
+            background-color: darkred;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Money Usage Tracker</h1>
 
-    <div class="form">
-      <input type="text" id="category" placeholder="Category (e.g., Food)" />
-      <input type="text" id="description" placeholder="Description" />
-      <input type="date" id="date" />
-      <input type="number" id="expense" placeholder="Expense Amount" />
-      <button onclick="saveExpense()">Save Expense</button>
+    <div class="container">
+        <h1>Expense Tracker</h1>
+        
+        <div class="expense-form">
+            <input type="text" id="expense-name" placeholder="Expense Name">
+            <input type="number" id="expense-amount" placeholder="Amount" min="0">
+            <button onclick="addExpense()">Add Expense</button>
+        </div>
+
+        <h2>Expense List:</h2>
+        <div id="expenses-list"></div>
     </div>
 
-    <div class="expense-list">
-      <h2>Saved Expenses</h2>
-      <ul id="expenses"></ul>
-    </div>
-  </div>
+    <script>
+        // Retrieve expenses from localStorage
+        function loadExpenses() {
+            const expenses = JSON.parse(localStorage.getItem('expenses')) || [];
+            return expenses;
+        }
 
-  <script>
-    // Load saved expenses from localStorage when the page is loaded
-    document.addEventListener('DOMContentLoaded', loadExpenses);
+        // Save updated expenses to localStorage
+        function saveExpenses(expenses) {
+            localStorage.setItem('expenses', JSON.stringify(expenses));
+        }
 
-    function loadExpenses() {
-      const savedExpenses = JSON.parse(localStorage.getItem('expenses')) || [];
-      const expensesList = document.getElementById('expenses');
-      expensesList.innerHTML = ''; // Clear existing list
+        // Render expenses on the page
+        function renderExpenses() {
+            const expenses = loadExpenses();
+            const expensesList = document.getElementById('expenses-list');
+            expensesList.innerHTML = ''; // Clear the existing list
 
-      savedExpenses.forEach((expense) => {
-        const li = document.createElement('li');
-        li.innerHTML = `<strong>${expense.category}</strong> - ${expense.description} <br>
-                       Date: ${expense.date} <br>
-                       Expense: $${expense.amount}`;
-        expensesList.appendChild(li);
-      });
-    }
+            expenses.forEach((expense, index) => {
+                const expenseElement = document.createElement('div');
+                expenseElement.classList.add('expense-item');
+                expenseElement.innerHTML = `
+                    <span>${expense.name}: $${expense.amount}</span>
+                    <button class="delete-btn" onclick="deleteExpense(${index})">Delete</button>
+                `;
+                expensesList.appendChild(expenseElement);
+            });
+        }
 
-    function saveExpense() {
-      const category = document.getElementById('category').value;
-      const description = document.getElementById('description').value;
-      const date = document.getElementById('date').value;
-      const expenseAmount = parseFloat(document.getElementById('expense').value);
+        // Delete an expense from the list
+        function deleteExpense(index) {
+            const expenses = loadExpenses();
+            expenses.splice(index, 1);  // Remove the expense at the given index
+            saveExpenses(expenses);  // Save the updated list to localStorage
+            renderExpenses();  // Re-render the updated list
+        }
 
-      if (!category || !description || !date || isNaN(expenseAmount) || expenseAmount <= 0) {
-        alert('Please fill in all fields correctly.');
-        return;
-      }
+        // Function to add a new expense
+        function addExpense() {
+            const name = document.getElementById('expense-name').value.trim();
+            const amount = parseFloat(document.getElementById('expense-amount').value);
 
-      // Create a new expense object
-      const newExpense = {
-        category: category,
-        description: description,
-        date: date,
-        amount: expenseAmount
-      };
+            if (name && !isNaN(amount) && amount > 0) {
+                const expenses = loadExpenses();
+                expenses.push({ name, amount });
+                saveExpenses(expenses);
+                renderExpenses();  // Re-render the list with the new expense
+                document.getElementById('expense-name').value = '';  // Clear the input fields
+                document.getElementById('expense-amount').value = '';
+            } else {
+                alert('Please enter valid expense details.');
+            }
+        }
 
-      // Retrieve existing expenses from localStorage, or create a new array if none exist
-      const savedExpenses = JSON.parse(localStorage.getItem('expenses')) || [];
+        // Initial rendering of expenses
+        renderExpenses();
+    </script>
 
-      // Add the new expense to the list
-      savedExpenses.push(newExpense);
-
-      // Save the updated list back to localStorage
-      localStorage.setItem('expenses', JSON.stringify(savedExpenses));
-
-      // Clear the input fields
-      document.getElementById('category').value = '';
-      document.getElementById('description').value = '';
-      document.getElementById('date').value = '';
-      document.getElementById('expense').value = '';
-
-      // Reload the expenses list
-      loadExpenses();
-    }
-  </script>
 </body>
 </html>
-
