--- a/index.html
+++ b/index.html
@@ -8,153 +8,130 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
             padding: 20px;
-            background-color: #f4f4f9;
         }
         h1 {
             text-align: center;
-            color: #333;
         }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .expense-form {
+        .form-container {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
             margin-bottom: 20px;
         }
-        .expense-form input, .expense-form select, .expense-form button {
+        .form-container input,
+        .form-container button {
             padding: 10px;
-            font-size: 16px;
-            margin: 5px;
+            font-size: 1em;
+            border-radius: 5px;
+            border: 1px solid #ddd;
         }
-        .expense-form input, .expense-form select {
-            width: 30%;
-        }
-        .expense-form button {
+        .form-container button {
             background-color: #4CAF50;
             color: white;
-            border: none;
             cursor: pointer;
         }
-        .expense-form button:hover {
+        .form-container button:hover {
             background-color: #45a049;
         }
-        h2 {
-            color: #333;
+        .expense-list {
+            margin-top: 20px;
         }
         .expense-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            background-color: white;
             border: 1px solid #ddd;
-            margin: 5px 0;
-            background-color: #fafafa;
+            margin-bottom: 10px;
             border-radius: 5px;
         }
         .expense-item button {
-            background-color: red;
+            background-color: #f44336;
             color: white;
-            border: none;
-            padding: 5px 10px;
             cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
         }
         .expense-item button:hover {
-            background-color: darkred;
+            background-color: #e53935;
+        }
+        .expense-item span {
+            margin-right: 10px;
+        }
+        .expense-item .date {
+            font-size: 0.9em;
+            color: #888;
         }
     </style>
 </head>
 <body>
-
     <div class="container">
         <h1>Expense Tracker</h1>
-        
-        <div class="expense-form">
-            <input type="text" id="expense-name" placeholder="Expense Name">
-            <input type="number" id="expense-amount" placeholder="Amount" min="0">
-            <input type="text" id="expense-category" placeholder="Category">
-            <input type="text" id="expense-description" placeholder="Description">
+        <div class="form-container">
+            <input type="text" id="expense-name" placeholder="Expense name" required>
+            <input type="number" id="expense-amount" placeholder="Amount" required>
+            <input type="date" id="expense-date" required>
             <button onclick="addExpense()">Add Expense</button>
         </div>
-
-        <h2>Expense List:</h2>
-        <div id="expenses-list"></div>
+        <div class="expense-list" id="expense-list"></div>
     </div>
 
     <script>
-        // Retrieve expenses from localStorage
-        function loadExpenses() {
-            const expenses = JSON.parse(localStorage.getItem('expenses')) || [];
-            return expenses;
-        }
+        // Load expenses from localStorage
+        let expenses = JSON.parse(localStorage.getItem('expenses')) || [];
 
-        // Save updated expenses to localStorage
-        function saveExpenses(expenses) {
-            localStorage.setItem('expenses', JSON.stringify(expenses));
-        }
-
-        // Render expenses on the page
         function renderExpenses() {
-            const expenses = loadExpenses();
-            const expensesList = document.getElementById('expenses-list');
-            expensesList.innerHTML = ''; // Clear the existing list
-
+            const expenseList = document.getElementById('expense-list');
+            expenseList.innerHTML = '';
             expenses.forEach((expense, index) => {
-                const expenseElement = document.createElement('div');
-                expenseElement.classList.add('expense-item');
-                expenseElement.innerHTML = `
-                    <div>
-                        <strong>${expense.name}</strong> - $${expense.amount} <br>
-                        <em>Category: ${expense.category}</em> <br>
-                        <small>${expense.description}</small> <br>
-                        <small>Date: ${expense.date}</small>
-                    </div>
-                    <button class="delete-btn" onclick="deleteExpense(${index})">Delete</button>
+                const expenseItem = document.createElement('div');
+                expenseItem.classList.add('expense-item');
+                expenseItem.innerHTML = `
+                    <span>${expense.name}</span>
+                    <span>$${expense.amount}</span>
+                    <span class="date">${expense.date}</span>
+                    <button onclick="deleteExpense(${index})">Delete</button>
                 `;
-                expensesList.appendChild(expenseElement);
+                expenseList.appendChild(expenseItem);
             });
         }
 
-        // Delete an expense from the list
-        function deleteExpense(index) {
-            const expenses = loadExpenses();
-            expenses.splice(index, 1);  // Remove the expense at the given index
-            saveExpenses(expenses);  // Save the updated list to localStorage
-            renderExpenses();  // Re-render the updated list
-        }
-
-        // Function to add a new expense
         function addExpense() {
-            const name = document.getElementById('expense-name').value.trim();
-            const amount = parseFloat(document.getElementById('expense-amount').value);
-            const category = document.getElementById('expense-category').value.trim();
-            const description = document.getElementById('expense-description').value.trim();
+            const name = document.getElementById('expense-name').value;
+            const amount = document.getElementById('expense-amount').value;
+            const date = document.getElementById('expense-date').value;
 
-            if (name && !isNaN(amount) && amount > 0 && category && description) {
-                const date = new Date().toLocaleDateString(); // Get current date
-                const expenses = loadExpenses();
-                expenses.push({ name, amount, category, description, date });
-                saveExpenses(expenses);
-                renderExpenses();  // Re-render the list with the new expense
-                document.getElementById('expense-name').value = '';  // Clear the input fields
+            if (name && amount && date) {
+                const newExpense = { name, amount, date };
+                expenses.push(newExpense);
+                localStorage.setItem('expenses', JSON.stringify(expenses));
+                renderExpenses();
+
+                // Clear input fields
+                document.getElementById('expense-name').value = '';
                 document.getElementById('expense-amount').value = '';
-                document.getElementById('expense-category').value = '';
-                document.getElementById('expense-description').value = '';
+                document.getElementById('expense-date').value = '';
             } else {
-                alert('Please enter valid expense details.');
+                alert('Please fill in all fields');
             }
         }
 
-        // Initial rendering of expenses
+        function deleteExpense(index) {
+            expenses.splice(index, 1); // Remove expense from array
+            localStorage.setItem('expenses', JSON.stringify(expenses)); // Update localStorage
+            renderExpenses(); // Re-render the expense list
+        }
+
+        // Initial render of expenses
         renderExpenses();
     </script>
-
 </body>
 </html>
