--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             margin-bottom: 20px;
         }
         .form-container input,
+        .form-container select,
         .form-container button {
             padding: 10px;
             font-size: 1em;
@@ -70,6 +71,10 @@
             font-size: 0.9em;
             color: #888;
         }
+        .expense-item .category {
+            font-size: 0.9em;
+            color: #555;
+        }
     </style>
 </head>
 <body>
@@ -79,6 +84,14 @@
             <input type="text" id="expense-name" placeholder="Expense name" required>
             <input type="number" id="expense-amount" placeholder="Amount" required>
             <input type="date" id="expense-date" required>
+            <select id="expense-category" required>
+                <option value="">Select Category</option>
+                <option value="Food">Food</option>
+                <option value="Transport">Transport</option>
+                <option value="Entertainment">Entertainment</option>
+                <option value="Utilities">Utilities</option>
+                <option value="Other">Other</option>
+            </select>
             <button onclick="addExpense()">Add Expense</button>
         </div>
         <div class="expense-list" id="expense-list"></div>
@@ -97,6 +110,7 @@
                 expenseItem.innerHTML = `
                     <span>${expense.name}</span>
                     <span>$${expense.amount}</span>
+                    <span class="category">${expense.category}</span>
                     <span class="date">${expense.date}</span>
                     <button onclick="deleteExpense(${index})">Delete</button>
                 `;
@@ -108,9 +122,10 @@
             const name = document.getElementById('expense-name').value;
             const amount = document.getElementById('expense-amount').value;
             const date = document.getElementById('expense-date').value;
+            const category = document.getElementById('expense-category').value;
 
-            if (name && amount && date) {
-                const newExpense = { name, amount, date };
+            if (name && amount && date && category) {
+                const newExpense = { name, amount, date, category };
                 expenses.push(newExpense);
                 localStorage.setItem('expenses', JSON.stringify(expenses));
                 renderExpenses();
@@ -119,6 +134,7 @@
                 document.getElementById('expense-name').value = '';
                 document.getElementById('expense-amount').value = '';
                 document.getElementById('expense-date').value = '';
+                document.getElementById('expense-category').value = '';
             } else {
                 alert('Please fill in all fields');
             }
